Blender crashes when any mesh is disabled in renders and tries to render #62457

Closed
opened 2019-03-11 17:31:48 +01:00 by Karl Northfell · 9 comments

System Information
Operating system: Windows 10 Pro 64-bit (10.0, Build 17134)
Graphics card: Nvidia GeForce GTX 1080

Blender Version
2.8 Beta Date: 2019-03-10 22:28
Hash: 6fd11a21f5
Branch: blender.27

Short description of error
Blender crashes when attempting to render (both Eevee and Cycles affected) when any mesh is disabled in renders

Exact steps for others to reproduce the error
Blend file attached. By default the cube is disabled in renders (camera icon in scene collection), hitting F12 or trying to render the animation should instantly crash blender. Enabling the cube in render view should allow F12 or render animation to work. Blender_Crash.zip

hidden.png

**System Information** Operating system: Windows 10 Pro 64-bit (10.0, Build 17134) Graphics card: Nvidia GeForce GTX 1080 **Blender Version** 2.8 Beta Date: 2019-03-10 22:28 Hash: 6fd11a21f5c5 Branch: blender.27 **Short description of error** Blender crashes when attempting to render (both Eevee and Cycles affected) when any mesh is disabled in renders **Exact steps for others to reproduce the error** Blend file attached. By default the cube is disabled in renders (camera icon in scene collection), hitting F12 or trying to render the animation should instantly crash blender. Enabling the cube in render view should allow F12 or render animation to work. [Blender_Crash.zip](https://archive.blender.org/developer/F6803902/Blender_Crash.zip) ![hidden.png](https://archive.blender.org/developer/F6803919/hidden.png)
Author

Added subscriber: @GlobalKrampus

Added subscriber: @GlobalKrampus
Author

I noticed if you move all objects to a new collection and disable an object in renders it will render without crashing, but if you move an object back to the original collection and disable it in renders it crashes.

I noticed if you move all objects to a new collection and disable an object in renders it will render without crashing, but if you move an object back to the original collection and disable it in renders it crashes.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

There seems to be lots of objects called "cubelet.XXX" and some others in the RidgidBodyWorld collection.
(these are not linked to the scene nor viewlayer?)
Interestingly the Ridgid Body World settings under Properties Editor > scene says its Collection is Collection (not RidgidBodyWorld collection)
If these are there I am getting this upon render:

find_node_operation: Failed for (TRANSFORM_INIT, '')
find_node_operation: Failed for (TRANSFORM_LOCAL, '')
add_relation(Transform Init) - Could not find op_from (OperationKey(type: TRANSFORM, component name: '', operation code: TRANSFORM_INIT))
add_relation(Transform Init) - Could not find op_to (OperationKey(type: TRANSFORM, component name: '', operation code: TRANSFORM_LOCAL))
find_node_operation: Failed for (TRANSFORM_LOCAL, '')
find_node_operation: Failed for (TRANSFORM_EVAL, '')
add_relation(Eval) - Could not find op_from (OperationKey(type: TRANSFORM, component name: '', operation code: TRANSFORM_LOCAL))
add_relation(Eval) - Could not find op_to (OperationKey(type: TRANSFORM, component name: '', operation code: TRANSFORM_EVAL))
find_node_operation: Failed for (TRANSFORM_EVAL, '')
find_node_operation: Failed for (TRANSFORM_FINAL, '')
add_relation(Eval) - Could not find op_from (OperationKey(type: TRANSFORM, component name: '', operation code: TRANSFORM_EVAL))
add_relation(Eval) - Could not find op_to (OperationKey(type: TRANSFORM, component name: '', operation code: TRANSFORM_FINAL))
find_node component: Could not find ID MECube
add_relation(Object Geometry Base Data) - Could not find op_from (ComponentKey(MECube, GEOMETRY))
add_relation(Object Geometry Base Data) - Could not find op_to (ComponentKey(OBCube, GEOMETRY))
find_node_operation: Failed for (GEOMETRY_EVAL, '')
add_relation(CoW Relation) - Failed, but op_from (OperationKey(type: LAYER_COLLECTIONS, component name: '', operation code: VIEW_LAYER_EVAL)) was ok
add_relation(CoW Relation) - Could not find op_to (OperationKey(type: GEOMETRY, component name: '', operation code: GEOMETRY_EVAL))

However when I remove the Ridgid Body World (or just set its collection to the RidgidBodyWorld collection), everything renders fine...
Checking further...

There seems to be lots of objects called "cubelet.XXX" and some others in the `RidgidBodyWorld` collection. (these are not linked to the scene nor viewlayer?) Interestingly the `Ridgid Body World` settings under `Properties Editor` > `scene` says its Collection is `Collection` (not `RidgidBodyWorld` collection) If these are there I am getting this upon render: ``` find_node_operation: Failed for (TRANSFORM_INIT, '') find_node_operation: Failed for (TRANSFORM_LOCAL, '') add_relation(Transform Init) - Could not find op_from (OperationKey(type: TRANSFORM, component name: '', operation code: TRANSFORM_INIT)) add_relation(Transform Init) - Could not find op_to (OperationKey(type: TRANSFORM, component name: '', operation code: TRANSFORM_LOCAL)) find_node_operation: Failed for (TRANSFORM_LOCAL, '') find_node_operation: Failed for (TRANSFORM_EVAL, '') add_relation(Eval) - Could not find op_from (OperationKey(type: TRANSFORM, component name: '', operation code: TRANSFORM_LOCAL)) add_relation(Eval) - Could not find op_to (OperationKey(type: TRANSFORM, component name: '', operation code: TRANSFORM_EVAL)) find_node_operation: Failed for (TRANSFORM_EVAL, '') find_node_operation: Failed for (TRANSFORM_FINAL, '') add_relation(Eval) - Could not find op_from (OperationKey(type: TRANSFORM, component name: '', operation code: TRANSFORM_EVAL)) add_relation(Eval) - Could not find op_to (OperationKey(type: TRANSFORM, component name: '', operation code: TRANSFORM_FINAL)) find_node component: Could not find ID MECube add_relation(Object Geometry Base Data) - Could not find op_from (ComponentKey(MECube, GEOMETRY)) add_relation(Object Geometry Base Data) - Could not find op_to (ComponentKey(OBCube, GEOMETRY)) find_node_operation: Failed for (GEOMETRY_EVAL, '') add_relation(CoW Relation) - Failed, but op_from (OperationKey(type: LAYER_COLLECTIONS, component name: '', operation code: VIEW_LAYER_EVAL)) was ok add_relation(CoW Relation) - Could not find op_to (OperationKey(type: GEOMETRY, component name: '', operation code: GEOMETRY_EVAL)) ``` However when I remove the Ridgid Body World (or just set its collection to the `RidgidBodyWorld` collection), everything renders fine... Checking further...
Sergey Sharybin was assigned by Philipp Oeser 2019-03-12 11:18:43 +01:00
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

@Sergey: one for you?

@Sergey: one for you?
Member

This one also crashes [way simpler]:
#62457.blend

This one also crashes [way simpler]: [#62457.blend](https://archive.blender.org/developer/F6809482/T62457.blend)

This issue was referenced by c10d011cc5

This issue was referenced by c10d011cc596727db8ff4622a8ae28fd2bb15b39

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62457
No description provided.