Fix T62457: Crash with rigid body and disabled objects

Need to always ensure objects form rigid body wortld are part
of dependency graph.