source/blender/depsgraph/intern/builder/deg_builder_nodes.cc
@@ -496,6 +496,12 @@ void DepsgraphNodeBuilder::build_collection(
 			 * objects are poked with the new visibility flag, since they
 			 * might become visible too. */
 		}
+		else if (from_layer_collection == NULL &&
+		         !id_node->is_collection_fully_expanded) {
+			/* Initially collection was built from layer now, and was requested
+			 * to not recurs into object. But nw it's asked to recurs into all
+			 * objects. */
+		}
 		else {
 			return;
 		}
@@ -1047,8 +1053,8 @@ void DepsgraphNodeBuilder::build_rigidbody(Scene *scene)
 
 	/* Init/rebuild operation. */
 	add_operation_node(&scene->id, NodeType::TRANSFORM,
-	                  OperationCode::RIGIDBODY_REBUILD,
-	                  function_bind(BKE_rigidbody_rebuild_sim, _1, scene_cow));
+	                   OperationCode::RIGIDBODY_REBUILD,
+	                   function_bind(BKE_rigidbody_rebuild_sim, _1, scene_cow));
 	/* Do-sim operation. */
 	OperationNode *sim_node = add_operation_node(
 	        &scene->id, NodeType::TRANSFORM,
